[package]
authors = ["Solend Maintainers <maintainers@solend.fi>"]
description = "Solend Program CLI"
edition = "2018"
homepage = "https://solend.fi"
license = "Apache-2.0"
name = "solend-program-cli"
repository = "https://github.com/solendprotocol/solana-program-library"
version = "2.0.2"

[dependencies]
clap = "=2.34.0"
solana-clap-utils = "1.16.17"
solana-cli-config = "1.16.17"
solana-client = "1.16.17"
solana-logger = "1.16.17"
solana-sdk = "1.16.17"
solana-program = "1.16.17"
solend-sdk = { path="../sdk" }
solend-program = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3.0", features=["no-entrypoint"] }
spl-associated-token-account = "1.0"
solana-account-decoder = "1.16.17"

[[bin]]
name = "solend-cli"
path = "src/main.rs"
